--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,7 @@
+Changes in 3.5.91
+
+* Translation updates
+
 Changes in 3.5.5
 
 * Fix various layout bugs from previous changes (Sébastien Granjoux)
