--- a/po/el.po
+++ b/po/el.po
@@ -9,22 +9,22 @@
 # Panayotis Pakos <aeikineton@yahoo.com>, 2001.
 # Simos Xenitellis <simos@gnome.org>, 2008.
 # Jennie Petoumenou <epetoumenou@gmail.com>, 2009.
-# Dimitris Spingos (Δημήτρης Σπίγγος) <dmtrs32@gmail.com>, 2012.
+# Dimitris Spingos (Δημήτρης Σπίγγος) <dmtrs32@gmail.com>, 2012, 2013.
 msgid ""
 msgstr ""
 "Project-Id-Version: gdl.HEAD\n"
-"Report-Msgid-Bugs-To: http://bugzilla.gnome.org/enter_bug.cgi?"
-"product=gdl&keywords=I18N+L10N&component=general\n"
-"POT-Creation-Date: 2012-08-28 21:43+0000\n"
-"PO-Revision-Date: 2012-08-30 16:29+0200\n"
-"Last-Translator: Tom Tryfonidis <tomtryf@gmail.com>\n"
+"Report-Msgid-Bugs-To: http://bugzilla.gnome.org/enter_bug.cgi?product=gdl&ke"
+"ywords=I18N+L10N&component=general\n"
+"POT-Creation-Date: 2012-08-30 14:27+0000\n"
+"PO-Revision-Date: 2013-03-12 22:43+0300\n"
+"Last-Translator: Dimitris Spingos (Δημήτρης Σπίγγος) <dmtrs32@gmail.com>\n"
 "Language-Team: team@gnome.gr\n"
 "Language: el\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: nplurals=2; plural=(n != 1);\n"
-"X-Generator: Virtaal 0.7.0\n"
+"X-Generator: Virtaal 0.7.1\n"
 "X-Project-Style: gnome\n"
 
 #: ../gdl/deprecated/gdl-dock-tablabel.c:140 ../gdl/gdl-dock-item-grip.c:729
@@ -170,7 +170,6 @@ msgid "Preferred height for the dock item"
 msgstr "Προτιμώμενο ύψος για το στοιχείο προσάρτησης"
 
 #: ../gdl/gdl-dock-item.c:449
-#, fuzzy
 #| msgid "Iconify this dock"
 msgid "Iconified"
 msgstr "Εικονιδιοποιημένο"
