--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,8 @@
+Changes in 3.8.0
+
+* Translation: el (Dimitris Spingos)
+
+
 Changes in 3.7.91
 
 * Fix bgo#693298 - GdlDockItem::dock-drag-motion signal doesn't match vfunc
