--- a/po/lt.po
+++ b/po/lt.po
@@ -3,33 +3,34 @@
 # This file is distributed under the same license as the gdl package.
 #
 # Gintautas Miliauskas <gintas@akl.lt>, 2008.
-# Aurimas Černius <aurisc4@gmail.com>, 2010.
+# Aurimas Černius <aurisc4@gmail.com>, 2010, 2013.
+#
 msgid ""
 msgstr ""
 "Project-Id-Version: gdl\n"
-"Report-Msgid-Bugs-To: http://bugzilla.gnome.org/enter_bug.cgi?product=gdl&keywords=I18N+L10N&component=general\n"
-"POT-Creation-Date: 2012-08-04 20:00+0000\n"
-"PO-Revision-Date: 2012-08-25 22:52+0300\n"
+"Report-Msgid-Bugs-To: http://bugzilla.gnome.org/enter_bug.cgi?"
+"product=gdl&keywords=I18N+L10N&component=general\n"
+"POT-Creation-Date: 2013-08-02 10:29+0000\n"
+"PO-Revision-Date: 2013-08-12 23:14+0300\n"
 "Last-Translator: Aurimas Černius <aurisc4@gmail.com>\n"
 "Language-Team: Lietuvių <gnome-lt@lists.akl.lt>\n"
 "Language: \n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"Plural-Forms: nplurals=3; plural=(n%10==1 && n%100!=11 ? 0 : n%10>=2 && (n%100<10 || n%100>=20) ? 1 : 2);\n"
-"X-Generator: KBabel 1.11.4\n"
+"Plural-Forms: nplurals=3; plural=(n%10==1 && n%100!=11 ? 0 : n%10>=2 && (n"
+"%100<10 || n%100>=20) ? 1 : 2);\n"
+"X-Generator: Gtranslator 2.91.6\n"
 
-#: ../gdl/deprecated/gdl-dock-tablabel.c:140
-#: ../gdl/gdl-dock-item-grip.c:729
+#: ../gdl/deprecated/gdl-dock-tablabel.c:139 ../gdl/gdl-dock-item-grip.c:729
 msgid "Controlling dock item"
 msgstr "Įstatomojo elemento kontrolė"
 
-#: ../gdl/deprecated/gdl-dock-tablabel.c:141
+#: ../gdl/deprecated/gdl-dock-tablabel.c:140
 msgid "Dockitem which 'owns' this tablabel"
 msgstr "Įstatomasis elementas, kuriam priklauso ši kortelės etiketė"
 
-#: ../gdl/gdl-dock-bar.c:127
-#: ../gdl/gdl-dock-layout.c:128
+#: ../gdl/gdl-dock-bar.c:127 ../gdl/gdl-dock-layout.c:128
 msgid "Master"
 msgstr "Pagrindinis"
 
@@ -53,8 +54,7 @@ msgstr "Slankusis"
 msgid "Whether the dock is floating in its own window"
 msgstr "Ar įstatas slankioja savo paties lange"
 
-#: ../gdl/gdl-dock.c:205
-#: ../gdl/gdl-dock-master.c:187
+#: ../gdl/gdl-dock.c:205 ../gdl/gdl-dock-master.c:198
 msgid "Default title"
 msgstr "Numatytasis pavadinimas"
 
@@ -62,8 +62,7 @@ msgstr "Numatytasis pavadinimas"
 msgid "Default title for the newly created floating docks"
 msgstr "Numatytasis pavadinimas naujai sukuriamiems slankiesiems įstatams"
 
-#: ../gdl/gdl-dock.c:212
-#: ../gdl/gdl-dock-placeholder.c:192
+#: ../gdl/gdl-dock.c:212 ../gdl/gdl-dock-placeholder.c:192
 msgid "Width"
 msgstr "Plotis"
 
@@ -71,8 +70,7 @@ msgstr "Plotis"
 msgid "Width for the dock when it's of floating type"
 msgstr "Įstatymo plotis kai jo tipas slankusis"
 
-#: ../gdl/gdl-dock.c:220
-#: ../gdl/gdl-dock-placeholder.c:200
+#: ../gdl/gdl-dock.c:220 ../gdl/gdl-dock-placeholder.c:200
 msgid "Height"
 msgstr "Aukštis"
 
@@ -101,108 +99,127 @@ msgid "Skip taskbar"
 msgstr "Praleisti užduočių juostą"
 
 #: ../gdl/gdl-dock.c:256
-msgid "Whether or not to prevent a floating dock window from appearing in the taskbar"
+msgid ""
+"Whether or not to prevent a floating dock window from appearing in the "
+"taskbar"
 msgstr "Ar rodyti įstatomojo elemento langą užduočių juostoje"
 
-#: ../gdl/gdl-dock-item.c:327
+#: ../gdl/gdl-dock-item.c:385
 msgid "Orientation"
 msgstr "Kryptis"
 
-#: ../gdl/gdl-dock-item.c:328
+#: ../gdl/gdl-dock-item.c:386
 msgid "Orientation of the docking item"
 msgstr "Įstatomojo elemento kryptis"
 
-#: ../gdl/gdl-dock-item.c:343
+#: ../gdl/gdl-dock-item.c:401
 msgid "Resizable"
 msgstr "Keičiamo dydžio"
 
-#: ../gdl/gdl-dock-item.c:344
+#: ../gdl/gdl-dock-item.c:402
 msgid "If set, the dock item can be resized when docked in a GtkPanel widget"
-msgstr "Jei nustatyta, įstatomojo elemento dydis gali būti pakeistas, kai jis įstatytas į GtkPanel valdiklį"
+msgstr ""
+"Jei nustatyta, įstatomojo elemento dydis gali būti pakeistas, kai jis "
+"įstatytas į GtkPanel valdiklį"
 
-#: ../gdl/gdl-dock-item.c:351
+#: ../gdl/gdl-dock-item.c:409
 msgid "Item behavior"
 msgstr "Elemento elgsena"
 
-#: ../gdl/gdl-dock-item.c:352
-msgid "General behavior for the dock item (i.e. whether it can float, if it's locked, etc.)"
-msgstr "Įstatomojo elemento bendroji elgsena (pvz. ar gali slankioti, jei užrakintas, ir pan.)"
+#: ../gdl/gdl-dock-item.c:410
+msgid ""
+"General behavior for the dock item (i.e. whether it can float, if it's "
+"locked, etc.)"
+msgstr ""
+"Įstatomojo elemento bendroji elgsena (pvz. ar gali slankioti, jei "
+"užrakintas, ir pan.)"
 
-#: ../gdl/gdl-dock-item.c:360
-#: ../gdl/gdl-dock-master.c:194
+#: ../gdl/gdl-dock-item.c:418 ../gdl/gdl-dock-master.c:205
 msgid "Locked"
 msgstr "Užrakintas"
 
-#: ../gdl/gdl-dock-item.c:361
-msgid "If set, the dock item cannot be dragged around and it doesn't show a grip"
-msgstr "Jei nustatyta, įstatomasis elementas negali būti tampomas ir neturi griebiamosios zonos"
+#: ../gdl/gdl-dock-item.c:419
+msgid ""
+"If set, the dock item cannot be dragged around and it doesn't show a grip"
+msgstr ""
+"Jei nustatyta, įstatomasis elementas negali būti tampomas ir neturi "
+"griebiamosios zonos"
 
-#: ../gdl/gdl-dock-item.c:369
+#: ../gdl/gdl-dock-item.c:427
 msgid "Preferred width"
 msgstr "Pageidautinas plotis"
 
-#: ../gdl/gdl-dock-item.c:370
+#: ../gdl/gdl-dock-item.c:428
 msgid "Preferred width for the dock item"
 msgstr "Pageidautinas dydis įstatomajam elementui"
 
-#: ../gdl/gdl-dock-item.c:376
+#: ../gdl/gdl-dock-item.c:434
 msgid "Preferred height"
 msgstr "Pageidautinas aukštis"
 
-#: ../gdl/gdl-dock-item.c:377
+#: ../gdl/gdl-dock-item.c:435
 msgid "Preferred height for the dock item"
 msgstr "Pageidautinas aukštis įstatomajam elementui"
 
-#: ../gdl/gdl-dock-item.c:391
-#| msgid "Icon size"
+#: ../gdl/gdl-dock-item.c:449
 msgid "Iconified"
 msgstr "Paverstas piktograma"
 
-#: ../gdl/gdl-dock-item.c:392
-msgid "If set, the dock item is hidden but it has a corresponding icon in the dock bar allowing to show it again."
-msgstr "Jei nustatyta, įstatomasis elementas yra slepiamas, bet turi atitinkamą piktogramą įstatomoje juostoje, leidžiančią jį vėl parodyti."
+#: ../gdl/gdl-dock-item.c:450
+msgid ""
+"If set, the dock item is hidden but it has a corresponding icon in the dock "
+"bar allowing to show it again."
+msgstr ""
+"Jei nustatyta, įstatomasis elementas yra slepiamas, bet turi atitinkamą "
+"piktogramą įstatomoje juostoje, leidžiančią jį vėl parodyti."
 
-#: ../gdl/gdl-dock-item.c:408
-#| msgid "Close"
+#: ../gdl/gdl-dock-item.c:466
 msgid "Closed"
 msgstr "Užvertas"
 
-#: ../gdl/gdl-dock-item.c:409
+#: ../gdl/gdl-dock-item.c:467
 msgid "Whether the widget is closed."
 msgstr "Ar elementas yra užvertas."
 
-#: ../gdl/gdl-dock-item.c:822
+#: ../gdl/gdl-dock-item.c:872
 #, c-format
-msgid "You can't add a dock object (%p of type %s) inside a %s. Use a GdlDock or some other compound dock object."
-msgstr "Jūs negalite pridėti įstato objekto (%p tipo %s) %s viduje. naudokite GdlDock ar kitą sudėtinį įstato objektą"
+msgid ""
+"You can't add a dock object (%p of type %s) inside a %s. Use a GdlDock or "
+"some other compound dock object."
+msgstr ""
+"Jūs negalite pridėti įstato objekto (%p tipo %s) %s viduje. naudokite "
+"GdlDock ar kitą sudėtinį įstato objektą"
 
-#: ../gdl/gdl-dock-item.c:829
+#: ../gdl/gdl-dock-item.c:879
 #, c-format
-msgid "Attempting to add a widget with type %s to a %s, but it can only contain one widget at a time; it already contains a widget of type %s"
-msgstr "Bandoma pridėti %s tipo valdiklį prie %s, tačiau jis gali talpinti tik vieną valdiklį; jis jau talpina %s tipo valdiklį"
+msgid ""
+"Attempting to add a widget with type %s to a %s, but it can only contain one "
+"widget at a time; it already contains a widget of type %s"
+msgstr ""
+"Bandoma pridėti %s tipo valdiklį prie %s, tačiau jis gali talpinti tik vieną "
+"valdiklį; jis jau talpina %s tipo valdiklį"
 
-#: ../gdl/gdl-dock-item.c:1519
-#: ../gdl/gdl-dock-item.c:1569
+#: ../gdl/gdl-dock-item.c:1567 ../gdl/gdl-dock-item.c:1617
 #, c-format
 msgid "Unsupported docking strategy %s in dock object of type %s"
 msgstr "Nepalaikoma įstatimo strategija %s %s tipo įstatomajame objekte"
 
 #. UnLock menuitem
-#: ../gdl/gdl-dock-item.c:1682
+#: ../gdl/gdl-dock-item.c:1730
 msgid "UnLock"
 msgstr "Atrakinti"
 
 #. Hide menuitem.
-#: ../gdl/gdl-dock-item.c:1689
+#: ../gdl/gdl-dock-item.c:1737
 msgid "Hide"
 msgstr "Slėpti"
 
 #. Lock menuitem
-#: ../gdl/gdl-dock-item.c:1694
+#: ../gdl/gdl-dock-item.c:1742
 msgid "Lock"
 msgstr "Užrakinti"
 
-#: ../gdl/gdl-dock-item.c:1964
+#: ../gdl/gdl-dock-item.c:2014
 #, c-format
 msgid "Attempt to bind an unbound item %p"
 msgstr "Bandoma susieti nesusietą elementą %p"
@@ -220,9 +237,11 @@ msgid "Dockitem which 'owns' this grip"
 msgstr "Įstatomasis elementas, kuriam „priklauso“ ši griebiamoji zona"
 
 #: ../gdl/gdl-dock-layout.c:129
-#| msgid "GdlDockMaster object which the layout object is attached to"
-msgid "GdlDockMaster or GdlDockObject object which the layout object is attached to"
-msgstr "GdlDockMaster arba GdlDockObject objektas, prie kurio yra prikabintas išdėstymo objektas"
+msgid ""
+"GdlDockMaster or GdlDockObject object which the layout object is attached to"
+msgstr ""
+"GdlDockMaster arba GdlDockObject objektas, prie kurio yra prikabintas "
+"išdėstymo objektas"
 
 #: ../gdl/gdl-dock-layout.c:136
 msgid "Dirty"
@@ -234,38 +253,70 @@ msgstr "Teigiama, jei išdėstymas pakito ir reikalauja išsaugojimo į bylą"
 
 #: ../gdl/gdl-dock-layout.c:303
 #, c-format
-msgid "While loading layout: don't know how to create a dock object whose nick is '%s'"
-msgstr "Išdėstymo įkėlimo metu: nežinoma, kaip sukurti įstato objektą, kurio slapyvardis „%s“"
+msgid ""
+"While loading layout: don't know how to create a dock object whose nick is "
+"'%s'"
+msgstr ""
+"Išdėstymo įkėlimo metu: nežinoma, kaip sukurti įstato objektą, kurio "
+"slapyvardis „%s“"
 
-#: ../gdl/gdl-dock-master.c:188
+#: ../gdl/gdl-dock-master.c:199
 msgid "Default title for newly created floating docks"
 msgstr "Numatytasis pavadinimas naujai sukuriamiems slankiesiems įstatams"
 
-#: ../gdl/gdl-dock-master.c:195
-msgid "If is set to 1, all the dock items bound to the master are locked; if it's 0, all are unlocked; -1 indicates inconsistency among the items"
-msgstr "Jei nustatyta 1, visi įstatomieji elementai susieti su pagrindiniu yra užrakinami; jei nustatyta 0, visi įstatomieji elementai atrakinami; -1 reiškia, kad tarp elementų nėra darnos"
+#: ../gdl/gdl-dock-master.c:206
+msgid ""
+"If is set to 1, all the dock items bound to the master are locked; if it's "
+"0, all are unlocked; -1 indicates inconsistency among the items"
+msgstr ""
+"Jei nustatyta 1, visi įstatomieji elementai susieti su pagrindiniu yra "
+"užrakinami; jei nustatyta 0, visi įstatomieji elementai atrakinami; -1 "
+"reiškia, kad tarp elementų nėra darnos"
 
-#: ../gdl/gdl-dock-master.c:203
-#: ../gdl/gdl-switcher.c:842
+#: ../gdl/gdl-dock-master.c:214 ../gdl/gdl-switcher.c:895
 msgid "Switcher Style"
 msgstr "Jungiklio stilius"
 
-#: ../gdl/gdl-dock-master.c:204
-#: ../gdl/gdl-switcher.c:843
+#: ../gdl/gdl-dock-master.c:215 ../gdl/gdl-switcher.c:896
 msgid "Switcher buttons style"
 msgstr "Jungiklio mygtuko stilius"
 
-#: ../gdl/gdl-dock-master.c:835
-#, c-format
-msgid "master %p: unable to add object %p[%s] to the hash.  There already is an item with that name (%p)."
-msgstr "pagrindinis %p: nepavyko pridėti objekto %p[%s] į groteles.  Jau yra elementas tokiu vardu (%p)."
+#: ../gdl/gdl-dock-master.c:222 ../gdl/gdl-switcher.c:903
+#| msgid "Position"
+msgid "Tab Position"
+msgstr "Kortelių padėtis"
 
-#: ../gdl/gdl-dock-master.c:1056
-#, c-format
-msgid "The new dock controller %p is automatic.  Only manual dock objects should be named controller."
-msgstr "Naujasis %p įstatymo valdiklis yra automatinis. Tik rankiniu būdu įstatomi elementai turėtų būti vadinami valdikliais."
+#: ../gdl/gdl-dock-master.c:223 ../gdl/gdl-switcher.c:904
+msgid "Which side of the notebook holds the tabs"
+msgstr "Kuri knygelės pusė turi korteles"
 
-#: ../gdl/gdl-dock-master.c:1087
+#: ../gdl/gdl-dock-master.c:230 ../gdl/gdl-switcher.c:911
+msgid "Tab reorderable"
+msgstr "Kortelė perstumiamos"
+
+#: ../gdl/gdl-dock-master.c:231 ../gdl/gdl-switcher.c:912
+msgid "Whether the tab is reorderable by user action"
+msgstr "Ar kortelė yra perstumiama naudotojo veiksmu"
+
+#: ../gdl/gdl-dock-master.c:874
+#, c-format
+msgid ""
+"master %p: unable to add object %p[%s] to the hash.  There already is an "
+"item with that name (%p)."
+msgstr ""
+"pagrindinis %p: nepavyko pridėti objekto %p[%s] į groteles.  Jau yra "
+"elementas tokiu vardu (%p)."
+
+#: ../gdl/gdl-dock-master.c:1101
+#, c-format
+msgid ""
+"The new dock controller %p is automatic.  Only manual dock objects should be "
+"named controller."
+msgstr ""
+"Naujasis %p įstatymo valdiklis yra automatinis. Tik rankiniu būdu įstatomi "
+"elementai turėtų būti vadinami valdikliais."
+
+#: ../gdl/gdl-dock-master.c:1132
 #, c-format
 msgid "Dock #%d"
 msgstr "Įstatyti #%d"
@@ -278,71 +329,81 @@ msgstr "Puslapis"
 msgid "The index of the current page"
 msgstr "Dabartinio puslapio indeksas"
 
-#: ../gdl/gdl-dock-object.c:140
+#: ../gdl/gdl-dock-object.c:205
 msgid "Name"
 msgstr "Vardas"
 
-#: ../gdl/gdl-dock-object.c:141
+#: ../gdl/gdl-dock-object.c:206
 msgid "Unique name for identifying the dock object"
 msgstr "Unikalus vardas įstatomojo objekto atpažinimui"
 
-#: ../gdl/gdl-dock-object.c:153
+#: ../gdl/gdl-dock-object.c:220
 msgid "Long name"
 msgstr "Ilgasis vardas"
 
-#: ../gdl/gdl-dock-object.c:154
+#: ../gdl/gdl-dock-object.c:221
 msgid "Human readable name for the dock object"
 msgstr "Žmogui skaitomas įstato objekto vardas"
 
-#: ../gdl/gdl-dock-object.c:165
+#: ../gdl/gdl-dock-object.c:234
 msgid "Stock Icon"
 msgstr "Saugyklos piktograma"
 
-#: ../gdl/gdl-dock-object.c:166
+#: ../gdl/gdl-dock-object.c:235
 msgid "Stock icon for the dock object"
 msgstr "Saugyklos piktograma įstatomajam objektui"
 
-#: ../gdl/gdl-dock-object.c:179
+#: ../gdl/gdl-dock-object.c:250
 msgid "Pixbuf Icon"
 msgstr "Piktograma"
 
-#: ../gdl/gdl-dock-object.c:180
+#: ../gdl/gdl-dock-object.c:251
 msgid "Pixbuf icon for the dock object"
 msgstr "Piktograma įstatomajam objektui"
 
-#: ../gdl/gdl-dock-object.c:190
+#: ../gdl/gdl-dock-object.c:263
 msgid "Dock master"
 msgstr "Pagrindinis įstatas"
 
-#: ../gdl/gdl-dock-object.c:191
+#: ../gdl/gdl-dock-object.c:264
 msgid "Dock master this dock object is bound to"
 msgstr "Pagrindinis įstatas, su kuriuo yra susietas šis įstato objektas"
 
-#: ../gdl/gdl-dock-object.c:532
+#: ../gdl/gdl-dock-object.c:638
 #, c-format
-msgid "Call to gdl_dock_object_dock in a dock object %p (object type is %s) which hasn't implemented this method"
-msgstr "gdl_dock_object_dock iškvietimas įstato objekte %p (objekto tipas %s), kuris nerealizavo šio metodo"
+msgid ""
+"Call to gdl_dock_object_dock in a dock object %p (object type is %s) which "
+"hasn't implemented this method"
+msgstr ""
+"gdl_dock_object_dock iškvietimas įstato objekte %p (objekto tipas %s), kuris "
+"nerealizavo šio metodo"
 
-#: ../gdl/gdl-dock-object.c:748
+#: ../gdl/gdl-dock-object.c:851
 #, c-format
-msgid "Dock operation requested in a non-bound object %p. The application might crash"
-msgstr "Prašoma įstatymo operacija nesusietame objekte %p. Programa gali nulūžti"
+msgid ""
+"Dock operation requested in a non-bound object %p. The application might "
+"crash"
+msgstr ""
+"Prašoma įstatymo operacija nesusietame objekte %p. Programa gali nulūžti"
 
-#: ../gdl/gdl-dock-object.c:755
+#: ../gdl/gdl-dock-object.c:858
 #, c-format
 msgid "Cannot dock %p to %p because they belong to different masters"
-msgstr "Negalima įstatyti %p į %p, kadangi jie priklauso skirtingiems pagrindams"
+msgstr ""
+"Negalima įstatyti %p į %p, kadangi jie priklauso skirtingiems pagrindams"
 
-#: ../gdl/gdl-dock-object.c:810
+#: ../gdl/gdl-dock-object.c:923
 #, c-format
-msgid "Attempt to bind to %p an already bound dock object %p (current master: %p)"
-msgstr "Bandoma susieti su %p jau susietą objektą %p (dabartinis pagrindas: %p)"
+msgid ""
+"Attempt to bind to %p an already bound dock object %p (current master: %p)"
+msgstr ""
+"Bandoma susieti su %p jau susietą objektą %p (dabartinis pagrindas: %p)"
 
-#: ../gdl/gdl-dock-paned.c:146
+#: ../gdl/gdl-dock-paned.c:145
 msgid "Position"
 msgstr "Vieta"
 
-#: ../gdl/gdl-dock-paned.c:147
+#: ../gdl/gdl-dock-paned.c:146
 msgid "Position of the divider in pixels"
 msgstr "Skirtuko vieta pikseliais"
 
@@ -351,8 +412,12 @@ msgid "Sticky"
 msgstr "Lipnus"
 
 #: ../gdl/gdl-dock-placeholder.c:167
-msgid "Whether the placeholder will stick to its host or move up the hierarchy when the host is redocked"
-msgstr "Ar vietaženklis prilips prie savo pagrindo ar pakils hierarchija aukštyn, kai pagrindas bus perstatytas"
+msgid ""
+"Whether the placeholder will stick to its host or move up the hierarchy when "
+"the host is redocked"
+msgstr ""
+"Ar vietaženklis prilips prie savo pagrindo ar pakils hierarchija aukštyn, "
+"kai pagrindas bus perstatytas"
 
 #: ../gdl/gdl-dock-placeholder.c:174
 msgid "Host"
@@ -367,8 +432,12 @@ msgid "Next placement"
 msgstr "Kita vieta"
 
 #: ../gdl/gdl-dock-placeholder.c:183
-msgid "The position an item will be docked to our host if a request is made to dock to us"
-msgstr "Vieta, kurioje elementas bus įstatytas į mūsų pagrindą, jei bus paprašyta įstatyti į mus"
+msgid ""
+"The position an item will be docked to our host if a request is made to dock "
+"to us"
+msgstr ""
+"Vieta, kurioje elementas bus įstatytas į mūsų pagrindą, jei bus paprašyta "
+"įstatyti į mus"
 
 #: ../gdl/gdl-dock-placeholder.c:193
 msgid "Width for the widget when it's attached to the placeholder"
@@ -409,10 +478,13 @@ msgstr "Bandoma įstatyti įstato objektą į nesusietą vietaženklį"
 #: ../gdl/gdl-dock-placeholder.c:641
 #, c-format
 msgid "Got a detach signal from an object (%p) who is not our host %p"
-msgstr "Gautas atkabinimo signalas iš objekto (%p), kuris nėra mūsų pagrindas %p"
+msgstr ""
+"Gautas atkabinimo signalas iš objekto (%p), kuris nėra mūsų pagrindas %p"
 
 #: ../gdl/gdl-dock-placeholder.c:666
 #, c-format
-msgid "Something weird happened while getting the child placement for %p from parent %p"
-msgstr "Atsitiko kažkas negero bandant gauti vaiko vietą objektui %p iš tėvo %p"
-
+msgid ""
+"Something weird happened while getting the child placement for %p from "
+"parent %p"
+msgstr ""
+"Atsitiko kažkas negero bandant gauti vaiko vietą objektui %p iš tėvo %p"
