--- a/po/eu.po
+++ b/po/eu.po
@@ -3,6 +3,7 @@
 # This file is distributed under the same license as the PACKAGE package.
 #
 # Iñaki Larrañaga Murgoitio <dooteo@zundan.com>, 2008, 2011, 2013.
+#
 msgid ""
 msgstr ""
 "Project-Id-Version: eu_to_be_translate\n"
@@ -10,7 +11,7 @@ msgstr ""
 "POT-Creation-Date: 2013-08-30 16:46+0200\n"
 "PO-Revision-Date: 2013-08-30 16:45+0200\n"
 "Last-Translator: Iñaki Larrañaga Murgoitio <dooteo@zundan.com>\n"
-"Language-Team: Basque <itzulpena@euskalgnu.org>\n"
+"Language-Team: Basque <librezale@librezale.org>\n"
 "Language: eu\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
