--- a/po/pt_BR.po
+++ b/po/pt_BR.po
@@ -1,4 +1,4 @@
-# gdl: translation to Brazilian Portuguese (pt_BR)
+# Brazilian Portuguese translation for gdl
 # Copyright (C) 2003-2008 Free Software Foundation, Inc.
 # This file is distributed under the same license as the gdl package.
 # Alexandre Folle de Menezes <afmenez@terra.com.br>, 2003.
@@ -425,12 +425,12 @@ msgid ""
 "Whether the placeholder will stick to its host or move up the hierarchy when "
 "the host is redocked"
 msgstr ""
-"Se o espaço reservado se manterá fixado ao seu hóspede ou moverá acima na "
-"hierarquia quando o hóspede for reencaixado"
+"Se o espaço reservado se manterá fixado ao seu hospedeiro ou moverá acima na "
+"hierarquia quando o hospedeiro for reencaixado"
 
 #: ../gdl/gdl-dock-placeholder.c:174
 msgid "Host"
-msgstr "Hóspede"
+msgstr "Hospedeiro"
 
 #: ../gdl/gdl-dock-placeholder.c:175
 msgid "The dock object this placeholder is attached to"
@@ -445,7 +445,7 @@ msgid ""
 "The position an item will be docked to our host if a request is made to dock "
 "to us"
 msgstr ""
-"A posição em que um item será encaixado ao nosso hóspede se um pedido for "
+"A posição em que um item será encaixado ao nosso hospedeiro se um pedido for "
 "efetuado para se encaixar a nós"
 
 #: ../gdl/gdl-dock-placeholder.c:193
@@ -491,7 +491,7 @@ msgstr ""
 #, c-format
 msgid "Got a detach signal from an object (%p) who is not our host %p"
 msgstr ""
-"Obtido um sinal de desanexar de um objeto (%p) que não é o nosso hóspede %p"
+"Obtido um sinal de desanexar de um objeto (%p) que não é o nosso hospedeiro %p"
 
 #: ../gdl/gdl-dock-placeholder.c:666
 #, c-format
