Updated Latvian translation

--- a/po/lv.po
+++ b/po/lv.po
@@ -12,7 +12,7 @@ msgstr ""
 "Report-Msgid-Bugs-To: http://bugzilla.gnome.org/enter_bug.cgi?"
 "product=gdl&keywords=I18N+L10N&component=general\n"
 "POT-Creation-Date: 2013-08-02 10:29+0000\n"
-"PO-Revision-Date: 2013-10-14 19:21+0300\n"
+"PO-Revision-Date: 2013-10-14 19:27+0300\n"
 "Last-Translator: Rūdolfs Mazurs <rudolfs.mazurs@gmail.com>\n"
 "Language-Team: Latvian <lata-l10n@googlegroups.com>\n"
 "Language: lv\n"
@@ -244,7 +244,7 @@ msgid ""
 "GdlDockMaster or GdlDockObject object which the layout object is attached to"
 msgstr ""
 "GdlDockMaster vai GdlDockObject objekts, pie kura ir piesaistīts izkārtojuma "
-"objekts"
+"objektsgit"
 
 #: ../gdl/gdl-dock-layout.c:136
 msgid "Dirty"
