Update files for release

--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,11 @@
+Changes in 3.16.0
+
+* Translation: bs Samir Ribic
+* Translation: sv Anders Jonsson
+* Translation: tr Necdet Yücel, Muhammet Kara
+* Translation: eu Inaki Larranaga Murgoitio
+
+
 Changes in 3.14.0
 
 * No changes
