--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,8 @@
+Changes in 3.20.0
+
+* No changes
+
+
 Changes in 3.18.0
 
 * Use "resize" property and fix a bug in panel widget (Vladimir Motilenko)
