Update files for release

--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,10 @@
+Changes in 3.28.0
+
+* bgo#791913 - Convert Latin-1-encoded characters to UTF-8 (Ting-Wei Lan)
+
+* Translation: da (Ask Hjorth Larsen)
+
+
 Changes in 3.26.0
 
 None
