Update Catalan translation

--- a/po/ca.po
+++ b/po/ca.po
@@ -42,7 +42,7 @@ msgstr "Estil de la barra acoblable"
 
 #: ../gdl/gdl-dock-bar.c:141
 msgid "Dockbar style to show items on it"
-msgstr "Estil de la barra acoblable per mostrar-hi elements"
+msgstr "Estil de la barra acoblable per a mostrar-hi elements"
 
 #: ../gdl/gdl-dock.c:197
 msgid "Floating"
@@ -337,7 +337,7 @@ msgstr "Nom"
 
 #: ../gdl/gdl-dock-object.c:206
 msgid "Unique name for identifying the dock object"
-msgstr "Nom únic per identificar l'objecte acoblat"
+msgstr "Nom únic per a identificar l'objecte acoblat"
 
 #: ../gdl/gdl-dock-object.c:220
 msgid "Long name"
@@ -494,215 +494,3 @@ msgid ""
 msgstr ""
 "Ha succeït alguna cosa estranya quan s'estava obtenint la ubicació per a %p "
 "del seu pare %p"
-
-#~ msgid "Could not load layout user interface file '%s'"
-#~ msgstr ""
-#~ "No s'ha pogut carregar el fitxer de disposició de la interfície d'usuari "
-#~ "«%s»"
-
-#~ msgid "Visible"
-#~ msgstr "Visible"
-
-#~ msgid "Item"
-#~ msgstr "Element"
-
-#~ msgid "Dock items"
-#~ msgstr "Elements acoblats"
-
-#~ msgid "Layout Managment"
-#~ msgstr "Gestió de disposicions"
-
-#~ msgid "Saved layouts"
-#~ msgstr "Disposicions desades"
-
-#~ msgid "_Load"
-#~ msgstr "_Carrega"
-
-#~ msgid "_Lock dock items"
-#~ msgstr "B_loqueja elements acoblables"
-
-#~ msgid "Expander Size"
-#~ msgstr "Mida de l'expansor"
-
-#~ msgid "Size of the expander arrow."
-#~ msgstr "Mida de la fletxa expansora."
-
-#~ msgid "Layout managment"
-#~ msgstr "Gestió de la disposició"
-
-#~ msgid "Icon size"
-#~ msgstr "Mida de la icona"
-
-#~ msgid "Dock the toolbar"
-#~ msgstr "Adjunta la barra d'eines"
-
-#~ msgid "Un dock the toolbar"
-#~ msgstr "Separa la barra d'eines"
-
-#~ msgid "GConf key"
-#~ msgstr "Clau GConf"
-
-#~ msgid "The gconf key for storing the recent entries."
-#~ msgstr "La clau gconf per emmagatzemar les entrades recents."
-
-#~ msgid "Path"
-#~ msgstr "Camí"
-
-#~ msgid "The path to put the menu items."
-#~ msgstr "El camí on posar els elements de menú."
-
-#~ msgid "Limit"
-#~ msgstr "Límit"
-
-#~ msgid "The maximum number of items to be allowed in the list."
-#~ msgstr "El nombre máxim d'elements permès en la llista."
-
-#~ msgid "List type"
-#~ msgstr "Tipus de llista"
-
-#~ msgid "The type with which the items will be numbered."
-#~ msgstr "El tipus amb el qual es numeraran els elements."
-
-#~ msgid "Open %s"
-#~ msgstr "Obre %s"
-
-#~ msgid "Factory for the Gnome Symbol Browser control."
-#~ msgstr "Factoria per al control del navegador de símbols del Gnome"
-
-#~ msgid "Gnome Symbol Browser Control"
-#~ msgstr "Control del navegador de símbols del Gnome"
-
-#~ msgid "Gnome Symbol Browser Control Factory"
-#~ msgstr "Factoria de control del navegador de símbols del Gnome"
-
-#~ msgid "Gnome Symbol Browser."
-#~ msgstr "Navegador de símbols del Gnome."
-
-#~ msgid "Goto Symbol"
-#~ msgstr "Vés al símbol"
-
-#~ msgid "Goto the displayed symbol"
-#~ msgstr "Vés a l'element mostrat"
-
-#~ msgid "Update Symbols"
-#~ msgstr "Actualitza símbols"
-
-#~ msgid "Update the symbol tree"
-#~ msgstr "Actualitza l'arbre de símbols"
-
-#~ msgid "_Goto to symbol"
-#~ msgstr "Vés a sím_bol"
-
-#~ msgid "_View"
-#~ msgstr "_Visualitza"
-
-#~ msgid "Unknown"
-#~ msgstr "Desconegut"
-
-#~ msgid "Classes"
-#~ msgstr "Classes"
-
-#~ msgid "Enums"
-#~ msgstr "Enumeracions"
-
-#~ msgid "Enumerators"
-#~ msgstr "Enumeradors"
-
-#~ msgid "Fields"
-#~ msgstr "Camps"
-
-#~ msgid "Functions"
-#~ msgstr "Funcions"
-
-#~ msgid "Interfaces"
-#~ msgstr "Interfícies"
-
-#~ msgid "Members"
-#~ msgstr "Membres"
-
-#~ msgid "Methods"
-#~ msgstr "Mètodes"
-
-#~ msgid "Namespaces"
-#~ msgstr "Espais de noms"
-
-#~ msgid "Packages"
-#~ msgstr "Paquets"
-
-#~ msgid "Prototypes"
-#~ msgstr "Prototipus"
-
-#~ msgid "Structs"
-#~ msgstr "Estructures"
-
-#~ msgid "Typedefs"
-#~ msgstr "Definicions de tipus"
-
-#~ msgid "Unions"
-#~ msgstr "Unions"
-
-#~ msgid "Variables"
-#~ msgstr "Variables"
-
-#~ msgid "ExternVars"
-#~ msgstr "Variables externes"
-
-#~ msgid "Macros"
-#~ msgstr "Macros"
-
-#~ msgid "MacrosWithArgs"
-#~ msgstr "Macros amb arguments"
-
-#~ msgid "Tags"
-#~ msgstr "Etiquetes"
-
-#~ msgid "Undefined"
-#~ msgstr "No definit"
-
-#~ msgid "<No Symbol>"
-#~ msgstr "<Cap símbol>"
-
-#~ msgid "Exit"
-#~ msgstr "Surt"
-
-#~ msgid "Open Project"
-#~ msgstr "Obre projecte"
-
-#~ msgid "Save Project"
-#~ msgstr "Desa projecte"
-
-#~ msgid "Set Current File"
-#~ msgstr "Defineix el fitxer actual"
-
-#~ msgid "Update"
-#~ msgstr "Actualitza"
-
-#~ msgid "Update the whole tree"
-#~ msgstr "Actualitza l'arbre complet"
-
-#~ msgid "_Exit"
-#~ msgstr "_Surt"
-
-#~ msgid "_File"
-#~ msgstr "_Fitxer"
-
-#~ msgid "_Open Project"
-#~ msgstr "_Obre projecte"
-
-#~ msgid "_Save Project"
-#~ msgstr "De_sa projecte"
-
-#~ msgid "_Set Current File"
-#~ msgstr "Definei_x el fitxer actual"
-
-#~ msgid "Open file..."
-#~ msgstr "Obre un fitxer..."
-
-#~ msgid "Set current file..."
-#~ msgstr "Defineix el fitxer actual..."
-
-#~ msgid "Save file..."
-#~ msgstr "Desa el fitxer..."
-
-#~ msgid "Can't initialize bonobo!"
-#~ msgstr "No es pot inicialitzar el bonobo"
